--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,7 +8,7 @@
                 <a th:href="@{/}">Home</a>
             </li>
             <li>
-                <a th:href="@{/}">Betting Events</a>
+                <a th:href="@{/bets}">Betting Events</a>
             </li>
             <li sec:authorize="isAuthenticated()">
                 <a th:href="@{/}">Add Betting Event</a>
